# alicedb

./: CMakeLists.txt  README.md
Source/: BufferPool.cpp  BufferPool.h  DiskManager.cpp  DiskManager.h  EdgeCache.h  Graph.h  Node.h  Producer.h  Storage.h  TablePage.h  WorkerPool.h
Source/Include/: AliceDB.h  Common.h
Tests/: BinaryFileTests.cpp  ComplexTests.cpp  ContinousDataArrivalTest.cpp  StatefullNodesTest.cpp  StatelessNodesTest.cpp  TCPDataProducerTest.cpp  WorkerPoolTest.cpp
main/: 1_filter_project.cpp  2_aggregate.cpp  3_join_continuous_print.cpp  4_web_client.cpp  5_continuous_arrival.cpp  CMakeLists.txt  example_1.cpp
